force-app/main/default/objects/LAD_Supersession_Data__c/LAD_Supersession_Data__c.object-meta.xml
<CustomObject>
    <label>Supersession Data</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Supersession Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supersessions Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>