force-app/main/default/objects/LAD_Supersession_Data__c/fields/LAD_Code_Change_Description__c.field-meta.xml
<CustomField>
    <fullName>LAD_Code_Change_Description__c</fullName>
    <label>Code Change Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>