force-app/main/default/objects/LAD_Supersession_Data__c/fields/LAD_Old_Code__c.field-meta.xml
<CustomField>
    <fullName>LAD_Old_Code__c</fullName>
    <label>Old Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>