force-app/main/default/objects/LAD_Supersession_Data__c/fields/LAD_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Supersessions Data</relationshipLabel>
    <relationshipName>Supersessions_Data</relationshipName>
    <type>Lookup</type>
</CustomField>